<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">


    <ImageView
        android:id="@+id/customer_img_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/customer_picture"
        android:src="@drawable/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_margin"
        android:padding="10dp"
        android:text="@string/customer_name_txt"

        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/location_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_img_view" />

    <TextView
        android:id="@+id/customer_mrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/customer_MRN_txt"
        android:textSize="@dimen/location_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_name" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_mrn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/arrival_time_txt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/arrival_time_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/background_gradient_text"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="@string/arrival_time_txt"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/arrival_time_txt"
                 />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/scheduled_time_txt"
                tools:layout_editor_absoluteX="10dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/expected_time_txt"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/expected_time_txt"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <TextView
                android:id="@+id/expected_time_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gradient_text"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="13:30"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/arrival_time_txt"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calling_time_txt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/calling_time_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gradient_text"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="@string/calling_time_txt"

                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/scheduled_time_txt"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/scheduled_time_txt"
                android:textColor="@color/colorPrimaryDark"

                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/scheduled_time_txt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gradient_text"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"

                android:text="12:00"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/arrival_time_txt"
                app:layout_constraintTop_toTopOf="@+id/textView10" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <!--        </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>